<resources>
    <string name="app_name">InspiredFood</string>
    <string name="add">+</string>
    <string name="starters">Starters</string>
    <string name="mains">Mains</string>
    <string name="desserts">Desserts</string>
    <string name="favourites">Favourites</string>
    <string name="all">All</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="starter">Starter</string>
    <string name="main">Main</string>
    <string name="dessert">Dessert</string>
    <string name="recipe_info_for">for</string>
    <string name="recipe_info_person">person</string>
    <string name="recipe_info_persons">persons</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation">Preparation</string>
    <string name="timers">Timers</string>
    <string name="timer_start">Start</string>
    <string name="timer_reset">Reset</string>
    <string name="timer_expired_headline">Timer expired!</string>
    <string name="timer_nameless_expired">Unnamed timer done.</string>
    <string name="timer_expired">" done."</string>
    <string name="ok">OK</string>
    <string name="sms_headline">Send shopping list</string>
    <string name="send_sms">Send SMS</string>
    <string name="sms_end_of_ingredients">end</string>
    <string name="delete">Delete</string>
    <string name="recipe_name_error">Error! Recipe name missing</string>
    <string name="no_of_people_error">Error! Number of people has to be between 1 and 20</string>
    <string name="ingredient_error">Error! Ingredient has empty fields</string>
    <string name="ingredient_amount_error">Error! Ingredient amount has to be less than 1000</string>
    <string name="timer_error">Error! Timer has empty fields</string>
    <string name="phone_number_missing_error">Error! Phone number missing</string>
    <string name="phone_number_invalid_error">Error! Phone number must have 8&#8212;16 digits</string>
    <string name="sms_ingredient_list_error">Error! Recipe has no ingredients to send</string>
    <string name="hint_recipe_name"><small><i>Recipe name</i></small></string>
    <string name="hint_ingredient"><small><i>Ingredient</i></small></string>
    <string name="hint_amount"><small><i>Amount</i></small></string>
    <string name="hint_unit"><small><i>Unit</i></small></string>
    <string name="hint_preparations"><small><i>Preparations</i></small></string>
    <string name="hint_timer_name"><small><i>Timer name</i></small></string>
    <string name="hint_timer_minutes"><small><i>Minutes</i></small></string>
    <string name="hint_phone_number"><small><i>Insert phone number</i></small></string>
</resources>
