<?xml version="1.0" encoding="utf-8"?>

<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="5dp"
    android:paddingTop="5dp"
    android:paddingEnd="7dp"
    android:paddingBottom="5dp"
    android:background="@drawable/cell_border_and_background">

    <AutoCompleteTextView
        style="@style/table_row_text_view_style"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:hint="@string/hint_ingredient"
        android:inputType="textPhonetic"
        android:maxLength="20"
        android:completionThreshold="1"/>

    <EditText
        style="@style/table_row_text_view_style"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:textAlignment="viewEnd"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        android:maxLength="8"/>

    <AutoCompleteTextView
        style="@style/table_row_text_view_style"
        android:gravity="center_vertical"
        android:minWidth="55dp"
        android:hint="@string/hint_unit"
        android:inputType="textPhonetic"
        android:maxLength="7"
        android:completionThreshold="1"/>

</TableRow>