<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pc.inspiredfood.RecipeListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="120dp"
            android:paddingRight="30dp"
            android:textSize="30dp"
            android:textColor="#000000"
            android:text="InspiredFood" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/mainButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:background="?android:attr/dividerHorizontal">

        <RadioButton
            android:id="@+id/starters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#000000"
            android:text="@string/starters"
            android:textSize="12.5dp"
            android:onClick="mainButtonClicked" />

        <RadioButton
            android:id="@+id/mains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#000000"
            android:text="@string/mains"
            android:textSize="12.5dp"
            android:onClick="mainButtonClicked" />

        <RadioButton
            android:id="@+id/desserts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#000000"
            android:text="@string/desserts"
            android:textSize="12.5dp"
            android:onClick="mainButtonClicked" />

        <RadioButton
            android:id="@+id/favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#000000"
            android:text="@string/favourites"
            android:textSize="12.5dp"
            android:onClick="mainButtonClicked" />

        <RadioButton
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#000000"
            android:text="@string/all"
            android:textSize="12.5dp"
            android:onClick="mainButtonClicked" />

    </RadioGroup>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

</LinearLayout>
